--- a/WordZone/Views/QuizMenu.xaml
+++ b/WordZone/Views/QuizMenu.xaml
@@ -19,7 +19,7 @@
         <Border Style="{StaticResource ContentBorder}" Grid.Row="1">
             <StackPanel>
                 <TextBlock Text="Z jakiego zbioru chcesz quiz?" Style="{StaticResource SemiBoldTB}"/>
-                <Border HorizontalAlignment="Center" BorderBrush="#8c1a6a" BorderThickness="2">
+                <Border HorizontalAlignment="Center" BorderBrush="#1B4332" BorderThickness="2">
                     <ComboBox ItemsSource="{Binding TableNamesList}" SelectedItem="{Binding TableName, Mode=TwoWay}" Width="300" BorderThickness="0"/>
                 </Border>
                 <Button Content="Startujemy Quiz!!" Width="300" Height="30" Command="{Binding StartQuizCommand}" Margin="0, 20, 0, 20" />
