--- a/WordZone/Styles/Style.xaml
+++ b/WordZone/Styles/Style.xaml
@@ -17,9 +17,9 @@
     </Style>
     <!-- Styl dla przycisków -->
     <Style x:Key="NaviButton" TargetType="Button">
-        <Setter Property="Background" Value="#A657AE" />
+        <Setter Property="Background" Value="#40916C" />
         <Setter Property="FontSize" Value="14" />
-        <Setter Property="BorderBrush" Value="#8c1a6a" />
+        <Setter Property="BorderBrush" Value="#1B4332" />
         <Setter Property="BorderThickness" Value="2" />
         <Setter Property="Margin" Value="0"/>
         <Setter Property="Template">
@@ -35,15 +35,15 @@
         </Setter>
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Background" Value="#9D75CB" />
+                <Setter Property="Background" Value="#2D6A4F" />
                 <Setter Property="FontWeight" Value="Bold" />
             </Trigger>
         </Style.Triggers>
     </Style>
     <Style TargetType="Button">
-        <Setter Property="Background" Value="#BD83C3" />
+        <Setter Property="Background" Value="#40916C" />
         <Setter Property="FontSize" Value="14" />
-        <Setter Property="BorderBrush" Value="#8c1a6a" />
+        <Setter Property="BorderBrush" Value="#1B4332" />
         <Setter Property="BorderThickness" Value="2" />
         <Setter Property="Margin" Value="0"/>
         <Setter Property="Padding" Value="4"/>
@@ -61,13 +61,37 @@
         </Setter>
         <Style.Triggers>
             <Trigger Property="IsMouseOver" Value="True">
-                <Setter Property="Background" Value="#C0A6DD" />
+                <Setter Property="Background" Value="#2D6A4F" />
+            </Trigger>
+        </Style.Triggers>
+    </Style>
+    <Style x:Key="ResButton" TargetType="Button">
+        <Setter Property="Background" Value="#40916C" />
+        <Setter Property="FontSize" Value="14" />
+        <Setter Property="BorderBrush" Value="#1B4332" />
+        <Setter Property="BorderThickness" Value="2" />
+        <Setter Property="Margin" Value="0"/>
+        <Setter Property="Padding" Value="4"/>
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="Button">
+                    <Border Background="{TemplateBinding Background}"
+                        BorderBrush="{TemplateBinding BorderBrush}"
+                        BorderThickness="{TemplateBinding BorderThickness}">
+                        <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" Margin="{TemplateBinding Padding}"/>
+                    </Border>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Style.Triggers>
+            <Trigger Property="IsMouseOver" Value="True">
+                <Setter Property="Background" Value="#2D6A4F" />
             </Trigger>
         </Style.Triggers>
     </Style>
     <Style x:Key="ContentBorder" TargetType="Border">
         <Setter Property="Grid.Row" Value="0"/>
-        <Setter Property="BorderBrush" Value="#8c1a6a"/>
+        <Setter Property="BorderBrush" Value="#1B4332"/>
         <Setter Property="BorderThickness" Value="2"/>
         <Setter Property="Padding" Value="20"/>
         <Setter Property="MaxWidth" Value="1000"/>
@@ -76,7 +100,7 @@
         <Setter Property="Background" Value="Transparent"/>
     </Style>
     <Style x:Key="HeaderBorder" TargetType="Border">
-        <Setter Property="BorderBrush" Value="#A657AE"/>
+        <Setter Property="BorderBrush" Value="#081C15"/>
         <Setter Property="BorderThickness" Value="0,0,0,1"/>
     </Style>
     <Style TargetType="ScrollBar">
@@ -84,10 +108,10 @@
         <Setter Property="Template">
             <Setter.Value>
                 <ControlTemplate TargetType="ScrollBar">
-                    <Grid Background="#9D75CB" Width="5">
+                    <Grid Background="#1B4332" Width="5">
                         <Track Name="PART_Track" IsDirectionReversed="True">
                             <Track.Thumb>
-                                <Thumb Background="#8c1a6a" BorderThickness="0" Width="5"/>
+                                <Thumb Background="#2D6A4F" BorderThickness="0" Width="5"/>
                             </Track.Thumb>
                         </Track>
                     </Grid>
@@ -96,13 +120,16 @@
         </Setter>
     </Style>
     <Style TargetType="Frame">
-        <Setter Property="Background" Value="#F0E4F2"/>
+        <Setter Property="Background" Value="#EFFAF1"/>
     </Style>
     <Style TargetType="TextBox">
-        <Setter Property="BorderBrush" Value="#8c1a6a"/>
+        <Setter Property="BorderBrush" Value="#1B4332"/>
         <Setter Property="BorderThickness" Value="2"/>
         <Setter Property="FontSize" Value="16"/>
         <Setter Property="Padding" Value="2"/>
     </Style>
-    <!--A657AE , 9D75CB, 9ABCA7, DF2316-->
+    <Style TargetType="Window">
+        <Setter Property="FontFamily" Value="Tahoma"/>
+    </Style>
+    <!--081C15 , 1B4332, 2D6A4F, 40916C, 52B788, 74C69D, 95D5B2, B7E4C7, D8F3DC-->
 </ResourceDictionary>
