--- a/WordZone/Styles/Style.xaml
+++ b/WordZone/Styles/Style.xaml
@@ -128,8 +128,13 @@
         <Setter Property="FontSize" Value="16"/>
         <Setter Property="Padding" Value="2"/>
     </Style>
+    <Style TargetType="CheckBox">
+        <Setter Property="BorderBrush" Value="#1B4332"/>
+        <Setter Property="BorderThickness" Value="1"/>
+    </Style>
     <Style TargetType="Window">
         <Setter Property="FontFamily" Value="Tahoma"/>
     </Style>
+    
     <!--081C15 , 1B4332, 2D6A4F, 40916C, 52B788, 74C69D, 95D5B2, B7E4C7, D8F3DC-->
 </ResourceDictionary>
