Refactorized Database; Changed naming for coherence

--- a/WordZone/Views/FlashCards.xaml
+++ b/WordZone/Views/FlashCards.xaml
@@ -22,7 +22,7 @@
             <StackPanel>
                 <TextBlock Text="Z jakiego zbioru chcesz się uczyć?" Style="{StaticResource SemiBoldTB}"/>
                 <Border HorizontalAlignment="Center" BorderBrush="#1B4332" BorderThickness="2">
-                        <ComboBox ItemsSource="{Binding TableNamesList}" SelectedItem="{Binding TableName, Mode=TwoWay}" Width="300" BorderThickness="0"/>
+                        <ComboBox ItemsSource="{Binding PacketNamesList}" SelectedItem="{Binding PacketName, Mode=TwoWay}" Width="300" BorderThickness="0"/>
                 </Border>
                 <CheckBox Content="Z polskiego na angielski" IsChecked="{Binding PolEngCB}" HorizontalAlignment="Center"/>
                 <Button Content="Rozpocznij nauke!" Width="300" Height="30" Command="{Binding StartLearningCommand}" Margin="0, 20, 0, 20" />
