--- a/WordZone/Views/AddPacket.xaml
+++ b/WordZone/Views/AddPacket.xaml
@@ -21,7 +21,7 @@
             <Border Style="{StaticResource ContentBorder}">
                 <StackPanel>
                     <TextBlock Text="Podaj nazwę nowego zbioru" Style="{StaticResource SemiBoldTB}"/>
-                    <TextBox Text="{Binding TableName}" TextAlignment="Center" Width="300" Height="30" Margin="0, 0, 0,20" />
+                    <TextBox Text="{Binding PacketName}" TextAlignment="Center" Width="300" Height="30" Margin="0, 0, 0,20" />
                     <Button Content="Wprowadź słówka!" Command="{Binding GenerateRowsCommand}" Visibility="{Binding GenerateRowsVis}" Width="300" Height="30"/>
 
                     <StackPanel Margin="0,-10,0,0">
