--- a/WordZone/Views/EditPacket.xaml
+++ b/WordZone/Views/EditPacket.xaml
@@ -22,7 +22,7 @@
                 <StackPanel>
                     <TextBlock Text="Jaki zbiór chcesz edytować?" Style="{StaticResource SemiBoldTB}"/>
                     <Border HorizontalAlignment="Center" BorderBrush="#1B4332" BorderThickness="2">
-                        <ComboBox ItemsSource="{Binding TableNamesList}" SelectedItem="{Binding TableName, Mode=TwoWay}" Width="300" BorderThickness="0"/>
+                        <ComboBox ItemsSource="{Binding PacketNamesList}" SelectedItem="{Binding PacketName, Mode=TwoWay}" Width="300" BorderThickness="0"/>
                     </Border>
                     <Button Content="Edytuj" Width="300" Height="30" Command="{Binding StartEditCommand}" Margin="0, 20, 0, 20" />
                     <Grid>
@@ -34,7 +34,7 @@
                         <Border Grid.Column="1" Padding="10" BorderBrush="#1B4332" BorderThickness="1" Visibility="{Binding UpdateVis}">
                             <StackPanel Name="RecordInputPanel" Margin="0,20,0,0">
                                 <Border BorderBrush="#081C15" BorderThickness="0,0,0,1">
-                                    <TextBlock Text="{Binding TableNameEdit}" Style="{StaticResource SemiBoldTB}"/>
+                                    <TextBlock Text="{Binding PacketNameEdit}" Style="{StaticResource SemiBoldTB}"/>
                                 </Border>
 
                                 <Button Content="Usuń zbiór" Command="{Binding DeletePacketCommand}" Margin="0,10,0,20" Width="100" HorizontalAlignment="Right" Background="PaleVioletRed"/>
@@ -51,7 +51,7 @@
                                                 <TextBox Grid.Column="0" Width="200" HorizontalAlignment="Right" Margin="0,0,10,10" Height="30" Text="{Binding EnglishWord}" />
                                                 <TextBlock Grid.Column="1" Text="—" FontSize="15" FontWeight="Bold" Margin="0,-3,0,0"/>
                                                 <TextBox Grid.Column="2" Width="200" HorizontalAlignment="Left" Margin="10,0,0,10" Text="{Binding PolishTranslation}" />
-                                                <Button Grid.Column="2" Width="100" Margin="220,0,0,10" HorizontalAlignment="Left" Content="Usuń" Command="{Binding DataContext.DeleteRowCommand, RelativeSource={RelativeSource AncestorType=ItemsControl}}" CommandParameter="{Binding EnglishWord}"/>
+                                                <Button Grid.Column="2" Width="100" Margin="220,0,0,10" HorizontalAlignment="Left" Content="Usuń" Command="{Binding DataContext.DeleteRowCommand, RelativeSource={RelativeSource AncestorType=ItemsControl}}" CommandParameter="{Binding ID}"/>
                                             </Grid>
                                         </DataTemplate>
                                     </ItemsControl.ItemTemplate>
