Added StartPage; bugfix(combobox when packets are equal to 0, EditPacket deleting new translation)

--- a/WordZone/Styles/DataTemplates.xaml
+++ b/WordZone/Styles/DataTemplates.xaml
@@ -20,4 +20,7 @@
     <DataTemplate DataType="{x:Type vm:FlashCardsPVM}">
         <vw:FlashCards/>
     </DataTemplate>
+    <DataTemplate DataType="{x:Type vm:StartPVM}">
+        <vw:StartPage/>
+    </DataTemplate>
 </ResourceDictionary>
