--- a/WordZone/Views/StartPage.xaml
+++ b/WordZone/Views/StartPage.xaml
@@ -9,6 +9,20 @@
       Title="StartPage">
 
     <Grid>
-        
+        <Grid.RowDefinitions>
+            <RowDefinition Height="auto"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Border Style="{StaticResource HeaderBorder}">
+            <TextBlock Text="Start" Style="{StaticResource HeaderTB}"/>
+        </Border>
+        <Border Style="{StaticResource ContentBorder}" Grid.Row="1">
+            <StackPanel>
+                <TextBlock Text="Witaj w WordZone!" Style="{StaticResource HeaderStartTB}"></TextBlock>
+                <TextBlock Text="WordZone ma na celu pomóc Ci w nauce języka angielskiego!" Style="{StaticResource SemiBoldTB}"/>
+                <TextBlock Text="Aplikacja w przyszłości będzie wciąż rozwijana!" Style="{StaticResource SemiBoldTB}"/>
+                <TextBlock Text="Powodzenia!" Style="{StaticResource HeaderStartTB}"></TextBlock>
+            </StackPanel>
+        </Border>
     </Grid>
 </Page>
